need to complete "modify" and "viewby Group"

--- a/mysite/WebContent/WEB-INF/web.xml
+++ b/mysite/WebContent/WEB-INF/web.xml
@@ -19,6 +19,12 @@
 		<servlet-name>GetAllEMailListServlet</servlet-name>
 		<servlet-class>assign.servlets.GetAllEMailListServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>GetAllEMailListbyGroupServlet</servlet-name>
+		<servlet-class>assign.servlets.GetAllEMailListbyGroupServlet</servlet-class>
+	</servlet>
+	
 	<servlet>
 		<servlet-name>AddEMailAddressServlet</servlet-name>
 		<servlet-class>assign.servlets.AddEMailAddressServlet</servlet-class>
@@ -32,6 +38,11 @@
 	<servlet>
 		<servlet-name>GetEMailAddressDtlsForUpdateServlet</servlet-name>
 		<servlet-class>assign.servlets.GetEMailAddressDtlsForUpdateServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>ModifyAnyOrAllForEmailAddressServlet</servlet-name>
+		<servlet-class>assign.servlets.ModifyAnyOrAllForEmailAddressServlet</servlet-class>
 	</servlet>
 
 	<servlet>
@@ -52,6 +63,11 @@
 	<servlet-mapping>
 		<servlet-name>GetAllEMailListServlet</servlet-name>
 		<url-pattern>/servlet/allemailaddressdtls</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>GetAllEMailListbyGroupServlet</servlet-name>
+		<url-pattern>/servlet/viewallbygroup</url-pattern>
 	</servlet-mapping>
 
 	<servlet-mapping>
@@ -77,6 +93,13 @@
 		<servlet-name>GetEMailAddressDtlsForUpdateServlet</servlet-name>
 		<url-pattern>/servlet/getemailinfoforupdate</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>ModifyAnyOrAllForEmailAddressServlet</servlet-name>
+		<url-pattern>/servlet/displayrecordupdate</url-pattern>
+	</servlet-mapping>
+	
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
